# P4ND0-bot

./: .gitignore  GEMINI.md  README.md  TASKS.md  bot.py  ccc.bat  db.py  deploy.bat  envfile.py  event_listing.md  feeds.json  graphql.config.yml  last_warhorn_sessions.json  main.py  output.json  pyproject.toml  requirements.txt  rss.py  warhorn_api.py  watched_schedules.json
cogs/: announcements.py  characters.py  rss.py  sessions.py  utility.py  warhorn.py
tests/: test_gotime.py  test_persistence.py  test_rewards.py  test_wishlist.py
utils/: db.py  persistence.py  session_format.py  warhorn_api.py  wishlist_format.py
