[project]
name = "p4nd0-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "discord-py>=2.7.1",
    "feedparser>=6.0.11",
    "mysql-connector-python>=9.6.0",
    "pytest==9.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.33.0",
    "tzdata>=2025.2",
]
